# HugAgentOS

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  README_CN.md  SECURITY.md  docker-compose.yml  install.sh  pyproject.toml  requirements-mem0.txt  requirements.txt
.claude/skills/hugagent-backend-dev/: SKILL.md
.claude/skills/hugagent-frontend-dev/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: desktop-ci.yml  desktop-release.yml
desktop/: .gitignore  README.md  package-lock.json  package.json
desktop/resources/server-bootstrap/: install-local-server.ps1  install-local-server.sh  requirements-macos-overrides.txt
desktop/scripts/: ce-payload.mjs  ce-payload.test.mjs  create-ce-archive.py  desktop-version.mjs  desktop-version.test.mjs  mac-installer.test.mjs  prepare-bundle.mjs  set-desktop-version.mjs  validate-release-version.mjs
desktop/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: README.md  icon.icns
desktop/src-tauri/src/: auth.rs  brand.rs  config.rs  lib.rs  local_server.rs  main.rs  menu.rs  notify.rs  prefs.rs  proxy.rs  update.rs
docker/: Dockerfile  Dockerfile.mcp  Dockerfile.script-runner  apt-skills.txt  dbhub.toml.example  package-skills.json  requirements-mcp.txt  requirements-script-runner.txt  requirements-skills.txt
docker/dbhub/: .gitkeep
docker/site-template/: init-react-site.sh
docker/site-template/react-vite/: .npmrc  index.html  package-lock.json  package.json  vite.config.mjs
document/: README.md
document/en/: README.md
document/en/api/: error-codes.md  overview.md
document/en/architecture/: backend.md  data-model.md  frontend.md  overview.md
document/en/deployment/: README.md  docker-compose.md  environment-variables.md  offline-production.md  quick-install.md  windows-deployment.md
document/en/development/: backend.md  frontend.md
document/en/editions/: build-ce.md  license.md  overview.md
document/en/getting-started/: domain-ontology-quickstart.md  introduction.md  quick-start.md
document/en/modules/: admin-console.md  agent-skills.md  auth.md  automation.md  autonomous-loop.md  canvas-artifacts.md  catalog.md  chat.md  knowledge-base.md  mcp-tools.md  memory.md  model-providers.md  ontology-harness.md  projects-myspace.md  prompts.md  sandbox.md  sites.md  storage.md
document/zh-CN/: README.md
document/zh-CN/api/: error-codes.md  overview.md
document/zh-CN/architecture/: backend.md  data-model.md  frontend.md  overview.md
document/zh-CN/deployment/: README.md  docker-compose.md  environment-variables.md  offline-production.md  quick-install.md  windows-deployment.md
document/zh-CN/development/: backend.md  frontend.md
document/zh-CN/editions/: build-ce.md  license.md  overview.md
document/zh-CN/getting-started/: domain-ontology-quickstart.md  introduction.md  quick-start.md
document/zh-CN/modules/: admin-console.md  agent-skills.md  auth.md  automation.md  autonomous-loop.md  canvas-artifacts.md  catalog.md  chat.md  knowledge-base.md  mcp-tools.md  memory.md  model-providers.md  ontology-harness.md  projects-myspace.md  prompts.md  sandbox.md  sites.md  storage.md
resources/fonts/: README.md
scripts/: get_license.sh
src/backend/: cli.py
src/backend/api/: __init__.py  app.py  deps.py  health.py  local_hosting.py  openapi_data_schemas.py  openapi_edition_schemas.py  schemas.py
src/backend/core/: __init__.py
src/backend/mcp_servers/: __init__.py  _launcher.py  _ports.py  _retrieve_cleaning.py  _serve.py
src/backend/orchestration/: autonomous_loop.py  batch_orchestrator.py  chat_run_executor.py  citations.py  followups.py  local_subprocess.py  loop_evaluator.py  memory_integration.py  registry.py  streaming.py  tool_callbacks.py  tool_payloads.py  workflow.py
src/backend/prompts/: __init__.py  kb_lite_section.py  project_section.py  prompt_config.py  prompt_runtime.py  provider.py
src/backend/scripts/: _loop_convergence_unit.py  _loop_db_resume_unit.py  _loop_evaluator_route_unit.py  _loop_integration_test.py  _loop_llmeval_smoke.py  _loop_preflight.py  _loop_selfverify_smoke.py  _loop_smoke.py  _loop_test_edgebench.py  backend_entrypoint.sh  e2e_long_xlsx.py  edit_chat_message.py  export_content.py  import_cherry_agents.py  import_content.py  init-db.sql
src/backend/tests/: _skill_engine.py  conftest.py  test_add_agent_permission.py  test_agent_marketplace.py  test_automation_oneshot_finalize.py  test_ce_agent_visibility.py  test_ce_runtime_contracts.py  test_channel_bots.py  test_channel_bots_api.py  test_default_plugin_bootstrap.py  test_desktop_auth.py  test_dingtalk_integration.py  test_email_integration.py  test_iter_budget_middleware.py  test_kb_permissions.py  test_local_memory_defaults.py  test_local_profile.py  test_local_subprocess.py  (+9 more)
src/frontend/: Dockerfile  default.conf.template  index.html  nginx.conf  package.json
(+1137 files in other folders)
